out.txt
./src/main.c: In function ‘main’:
./src/main.c:78:25: error: implicit declaration of function ‘print_error’ [-Wimplicit-function-declaration]
   78 |                         print_error(log, log_count);
      |                         ^~~~~~~~~~~
./src/main.c:122:41: error: implicit declaration of function ‘print_histories’ [-Wimplicit-function-declaration]
  122 |                                         print_histories(log, log_count, histories, histories_SF, histories_sign);
      |                                         ^~~~~~~~~~~~~~~
./src/main.c:154:41: error: implicit declaration of function ‘write_file’ [-Wimplicit-function-declaration]
  154 |                                         write_file(vars, vars_SF, vars_sign, histories, histories_SF, histories_sign);
      |                                         ^~~~~~~~~~
./src/main.c:155:41: error: implicit declaration of function ‘print_output’ [-Wimplicit-function-declaration]
  155 |                                         print_output(log, log_count, "cal.txt에 저장");
      |                                         ^~~~~~~~~~~~
./src/main.c:160:41: error: implicit declaration of function ‘read_file’ [-Wimplicit-function-declaration]
  160 |                                         read_file(vars, vars_SF, vars_sign, histories, histories_SF, histories_sign);
      |                                         ^~~~~~~~~
./src/main.c:177:49: error: implicit declaration of function ‘decimal2hex’ [-Wimplicit-function-declaration]
  177 |                                         switch (decimal2hex(input, result))
      |                                                 ^~~~~~~~~~~
./src/main.c:205:41: error: implicit declaration of function ‘general_calculate’ [-Wimplicit-function-declaration]
  205 |                                 switch (general_calculate(input, vars, vars_SF, vars_sign, histories, histories_SF, histories_sign, result))
      |                                         ^~~~~~~~~~~~~~~~~
./src/main.c:213:53: error: implicit declaration of function ‘get_SF’ [-Wimplicit-function-declaration]
  213 |                                         result_SF = get_SF(result);
      |                                                     ^~~~~~
./src/main.c:217:49: error: implicit declaration of function ‘numcpy’; did you mean ‘memcpy’? [-Wimplicit-function-declaration]
  217 |                                                 numcpy(vars[var_temp], result);
      |                                                 ^~~~~~
      |                                                 memcpy
./src/main.c:223:41: error: implicit declaration of function ‘print_num’ [-Wimplicit-function-declaration]
  223 |                                         print_num(log, log_count, result, result_SF, result_sign);
      |                                         ^~~~~~~~~
./src/main.c:226:41: error: implicit declaration of function ‘write_history’ [-Wimplicit-function-declaration]
  226 |                                         write_history(histories, histories_SF, histories_sign, result, result_SF, result_sign);
      |                                         ^~~~~~~~~~~~~
